plugins {
    id 'java'
}

group = 'com.github.vikthorvergara'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    sourceCompatibility = 25
    targetCompatibility = 25
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

task runRobinHood(type: JavaExec) {
    group = 'hash-map'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.github.vikthorvergara.hashmap.robinhood.RobinHoodHashMap'
}

task runLRU(type: JavaExec) {
    group = 'hash-map'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.github.vikthorvergara.hashmap.lru.LRUHashMap'
}

task runCuckoo(type: JavaExec) {
    group = 'hash-map'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.github.vikthorvergara.hashmap.cuckoo.CuckooHashMap'
}

task runSwissTable(type: JavaExec) {
    group = 'hash-map'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.github.vikthorvergara.hashmap.swisstable.SwissTableHashMap'
}

task runOffHeap(type: JavaExec) {
    group = 'hash-map'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.github.vikthorvergara.hashmap.offheap.OffHeapHashMap'
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}
